--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^0.0.0-experimental-fb9a90fa48-20240614",
+    "react-dom": "^0.0.0-experimental-fb9a90fa48-20240614"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
