--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
 	"name": "react-pokemon-api",
+
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
+"predeploy": "npm run build",
+"deploy": "gh-pages -d dist",
 		"build": "vite build",
 		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview",
-		"copy-dist-to-docs": "bash copy-dist-to-docs.sh"
+		"preview": "vite preview"
 	},
 	"dependencies": {
 		"react": "^0.0.0-experimental-fb9a90fa48-20240614",
@@ -22,6 +24,7 @@
 		"eslint-plugin-react": "^7.34.1",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.6",
+		"gh-pages": "^6.1.1",
 		"vite": "^5.2.0"
 	}
 }
